--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "faker": "^5.3.1",
+    "flush-promises": "^1.0.2",
     "moment": "^2.29.1",
     "rosie": "^2.0.1",
     "vue": "^2.6.11",
