--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_API_URL = https://api.stage.capusta.space/v1/
+VUE_APP_API_URL = https://www.breakingbadapi.com/api/
 VUE_APP_BEARER = 5d370094-57a7-4476-ace4-4f29bfa43d44
